1차 퍼블 완료

--- a/order/index.html
+++ b/order/index.html
@@ -39,7 +39,9 @@
     <section class="s01">
         <article>
             <div class="wrap">
-                <div class="video"></div>
+                <div class="video">
+                    <img src="../images/order/video.png" alt="">
+                </div>
                 <div class="box">
                     <div class="center">
                         <ul class="menu">
@@ -61,8 +63,10 @@
                                 </div>
                                 <ul class="option">
                                     <li>
-                                        <div>></div>
-                                        <div class="order-list">
+                                        <div class="arrow">
+                                            <img src="../images/common/order_arrow.svg" alt="arrow">
+                                        </div>
+                                        <div class="order-list option-list">
                                             <div class="img-wrap">
                                                 <img src="../images/main/option01.png" alt="">
                                             </div>
@@ -70,9 +74,8 @@
                                                 <div class="text">
                                                     <h2>떡추가</h2>
                                                     <p>tteok chuga</p>
-                                                    proc_nice
                                                     <div class="price">
-                                                        ₩4,000
+                                                        <strong>₩4,000</strong>
                                                     </div>
                                                 </div>
                                                 <div class="count">
@@ -81,15 +84,49 @@
                                             </div>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="arrow">
+                                            <img src="../images/common/order_arrow.svg" alt="arrow">
+                                        </div>
+                                        <div class="order-list option-list">
+                                            <div class="img-wrap">
+                                                <img src="../images/main/option02.png" alt="">
+                                            </div>
+                                            <div class="info">
+                                                <div class="text">
+                                                    <h2>오뎅추가</h2>
+                                                    <p>odeng chuga</p>
+                                                    <div class="price">
+                                                        <strong>₩4,000</strong>
+                                                    </div>
+                                                </div>
+                                                <div class="count">
+                                                    1
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
+                        <div class="line"></div>
+                        <div class="cash">
+                            <ul>
+                                <li>
+                                    <a href="#none"><img src="../images/order/cash01.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#none"><img src="../images/order/cash02.svg" alt=""></a>
+                                </li>
+                            </ul>
+                            <strong>₩39,000</strong>
+                        </div>
                     </div>
                     <h3>
                         WE ACCEPT ONLY CASH
                     </h3>
                     <div class="bottom">
-                        <div class="swiper">
+                        <div class="swiper order_banner">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <a href="javascript:alret('준비중')">
