--- a/main/index.html
+++ b/main/index.html
@@ -69,7 +69,7 @@
                         <div class="left">
                             <h1 class="a_1">
                                 <span>
-                                    I LOVE SINDANGDONGI I LOVE SINDANGDONGI
+                                    I LOVE SINDANGDONGI asd
                                 </span>
                             </h1>
                             <p class="a_1">
@@ -811,7 +811,9 @@
                 </div>
             </article>
         </section>
+        <!-- 해당 부분은 팝업의 -->
         <div class="popup_test">cancel</div>
+        <!--  -->
         <div class="popup_test">warning</div>
     </main>
 
@@ -877,7 +879,7 @@
                     <p class="sub-title">신당동떡볶이 <a href=""><img src="../images/common/speak.svg" alt="speak"></a></p>
                     <div class="more-title">
                         <p class="more-wrap">
-                            <span class="a">
+                            <span class="txt">
                                 Sindangdong tteokbokki is I Love Sindangdong’s
                                 signature tteokbokki with 40 years of hist years of hist years of hist years of hist
                             </span>
@@ -965,7 +967,6 @@
 <script src="../js/jquery.min.js"></script>
 <script src="../js/swiper-bundle.min.js"></script>
 <script src="../js/aos.js"></script>
-<!-- <script src="../js/common.js"></script> -->
 <script src="../js/index.js"></script>
 <script>
     let toggle_toggle_bg = document.querySelector("section.header .toggle .toggle_bg"),
@@ -986,12 +987,9 @@
         });
     });
 </script>
-
 <script>
     AOS.init({
         duration: 1000,
-        delay: 100,
-    });
+    })
 </script>
-
 </html>
