--- a/order/index.html
+++ b/order/index.html
@@ -33,14 +33,11 @@
 </head>
 
 <main id="subPage" class="order">
-    <section class="video">
-
-    </section>
     <section class="s01">
         <article>
             <div class="wrap">
                 <div class="video">
-                    <img src="../images/order/video.png" alt="">
+                    <img src="../images/order/video.png" alt="video">
                 </div>
                 <div class="box">
                     <div class="center">
@@ -151,17 +148,17 @@
     </section>
 </main>
 
+<script>
+    window.addEventListener("DOMContentLoaded", function() {
+        setTimeout(() => {
+            document.querySelector("section.s01").classList.add("load")
+        }, 1000);
+    });
+</script>
+
 <script src="../js/jquery.min.js"></script>
 <script src="../js/swiper-bundle.min.js"></script>
 <script src="../js/aos.js"></script>
-<!-- <script src="../js/common.js"></script> -->
 <script src="../js/index.js"></script>
-
-<script>
-    AOS.init({
-        duration: 1000,
-        delay: 100,
-    });
-</script>
 
 </html>
