--- a/language/index.html
+++ b/language/index.html
@@ -5,10 +5,10 @@ include_once "../include/header.html";
 <div class="language_tab">
     <ul>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang01.svg" alt=""></div>
-                    <p>Korean</p>
+                    <p>한국어</p>
                 </div>
                 <div class="right">
                     <div class="check">
@@ -21,7 +21,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li class="active">
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang02.svg" alt=""></div>
                     <p>English</p>
@@ -37,7 +37,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang03.svg" alt=""></div>
                     <p>中文 简体</p>
@@ -53,7 +53,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang04.svg" alt=""></div>
                     <p>中文 繁體</p>
@@ -69,7 +69,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang05.svg" alt=""></div>
                     <p>日本語</p>
@@ -85,7 +85,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang06.svg" alt=""></div>
                     <p> العربية</p>
@@ -101,7 +101,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang07.svg" alt=""></div>
                     <p>Bahasa Indonesia</p>
@@ -117,7 +117,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang08.svg" alt=""></div>
                     <p>Bahasa Melayu</p>
@@ -133,7 +133,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang09.svg" alt=""></div>
                     <p>Deutsche</p>
@@ -149,7 +149,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang10.svg" alt=""></div>
                     <p>Español</p>
@@ -165,7 +165,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang11.svg" alt=""></div>
                     <p>Français</p>
@@ -181,7 +181,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang12.svg" alt=""></div>
                     <p>Italiano</p>
@@ -197,7 +197,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang13.svg" alt=""></div>
                     <p>Português</p>
@@ -213,7 +213,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang14.svg" alt=""></div>
                     <p>Русский</p>
@@ -229,7 +229,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang15.svg" alt=""></div>
                     <p>Tagalog</p>
@@ -245,7 +245,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang16.svg" alt=""></div>
                     <p>ภาษาไทย</p>
@@ -261,7 +261,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang17.svg" alt=""></div>
                     <p>Tiếng Việt</p>
@@ -277,7 +277,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang18.svg" alt=""></div>
                     <p>Türkiye</p>
@@ -293,7 +293,7 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang19.svg" alt=""></div>
                     <p>Oʻzbekcha</p>
@@ -309,10 +309,10 @@ include_once "../include/header.html";
             </a>
         </li>
         <li>
-            <a href="#none">
+            <a href="../main/index.html">
                 <div class="left">
                     <div class="img-wrap"><img src="../images/language/lang20.svg" alt=""></div>
-                    <p><img src="../images/language/lang20_text.png" alt=""></p>
+                    <p>हिन्दी</p>
                 </div>
                 <div class="right">
                     <div class="check">
@@ -338,7 +338,6 @@ include_once "../include/footer.html";
 <script>
     document.querySelectorAll(".language_tab ul li").forEach(function(el, index) {
         el.addEventListener("click", function(e) {
-            e.preventDefault();
             document.querySelector(".language_tab ul li.active").classList.remove("active");
             el.classList.add("active");
         });
